fix element clipping => onClick evt was not working

--- a/client/src/styles/_editor.scss
+++ b/client/src/styles/_editor.scss
@@ -50,6 +50,7 @@
     font-size: 1em;
     border-radius: 10px;
     cursor: pointer;
+    z-index: 1;
     i {
         color: $white;
     }
@@ -122,6 +123,7 @@
 {
     margin: 0.5em 0;
     width: 100%;
+    z-index: 2;
 }
 
 .editor-container .content .editor .editor-content .box .block *:focus
